[package]
name = "miner-lottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.9.0"
bincode = "1.3.3"
hex = "0.4.3"
rug = { version = "1.19.1", features = ["serde"] }
serde = { version = "1.0.153", features = ["derive"] }
sha2 = "0.10.6"
tracing = "0.1.37"
